Javaで非推奨になったInteger(int)などをInteger.valueof(int)などに書き換えた
	new file:   Tasm7/.gitignore
	modified:   Tasm7/Makefile
	modified:   Tasm7/Tasm7.jar
	modified:   Tasm7/src/Asm.java
	modified:   Tasm7/src/Lexer.java
	modified:   Tasm7/src/SyntaxAnalyzer.java